# spitter

./: CMakeLists.txt  config.cpp  config.h  config.json  createNewSpitterDb.sql  hopper.sh  macmanuf.cpp  macmanuf.h  main.cpp  spitter.cpp  spitter.h  spitutils.cpp  spitutils.h  test.cpp
mac2oui/: lookup.cpp  mac_config.txt  oui_download.txt
macchina/: spitter.cpp  spitter.h  spitutils.cpp  spitutils.h
manufconfig/: macs_known.txt
oui_lookup/: lookup.cpp
tests/: CMakeLists.txt
tests/testset1/: 10min.pcap  CMakeLists.txt  check1.cpp
